# hover-rs

./: .envrc  .guix-channel  Cargo.toml  flake.nix  hover-rs.scm  main.cpp  manifest.scm  overlay.nix  package.nix  pkgs.nix  readme.md  shell.nix
.github/workflows/: build.yaml
src/: main.rs  shm.rs  utils.rs
