[package]
name = "hover-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hover"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.12"
nix = { version = "0.28.0", features = ["fs", "feature"] }
rand = "0.8.5"
time = { version = "0.3.34", features = ["formatting"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
